# cdc-stance-detection

./: .gitignore  README.md  pyproject.toml
data/: all_replies.csv  complete_CDC_labels.xlsx  merged_data_all_periods.csv  replies_to_label.csv  unlabeled_replies.csv
data/clean/: clean_periods.csv  clean_text_only.csv
data/period_1/: dataset_twitter-comments_1242915042049351682.csv  dataset_twitter-comments_1253085285161803777.csv  dataset_twitter-comments_1298728989796827137.csv  dataset_twitter-comments_1341137221068468224.csv
data/period_2/: period2_booster_1469711581353230338.csv  period2_booster_1475587321277956096.csv  period2_mask_1359981552361496580.csv  period2_mask_1454537846845476871.csv
data/period_3/: dataset_twitter-comments_1491849512893267971.csv  dataset_twitter-comments_1492528962932781060.csv  dataset_twitter-comments_1495115983865974796.csv  dataset_twitter-comments_1495477114799366145.csv  dataset_twitter-comments_1557099396654718976.csv  dataset_twitter-comments_1569355240100569089.csv  dataset_twitter-comments_1598048746411069442.csv  dataset_twitter-comments_21486021122089005058.csv  dataset_twitter-comments_21498387536032399361.csv
data/raw/replies_label/: all_replies.csv  labeled_replies.csv  replies_to_label.csv  replies_to_label.xlsx  (+1 more)
docs/: prokect_proposal.md
models/: COVID_CDC_stance_detection.ipynb
notebooks1/: 02_data_cleaning.ipynb
requirements/: requirements.txt
scripts/: cleaning.py  data_loader.py  embeddings.py  evaluate.py  join_labeled_data.py  merge_data.py  preprocessing.py  split_data.py  utils.py
(+25 files in other folders)
